Use java.lang.StackWalker